--- a/page.html
+++ b/page.html
@@ -33,7 +33,7 @@
         <p class="organic">organic vegetables to&nbsp;your&nbsp;diet today!</p>
         <p class = "comment-start">Our expertly curated vegetable baskets are made with the freshest,&nbsp;highest&nbsp;quality vegetables available. Fresh Harvest Box has&nbsp;got&nbsp;you covered. Fresh, high-quality vegetables in expertly curated&nbsp;vegetable baskets delivered to you.</p>
     </section>        
-        <img src = "img1.png" class = "startImg">
+        <img src = "img 1.png" class = "startImg">
     <header>
         <section class = "btn-men">
             <section class = "men">
@@ -47,7 +47,7 @@
 
     <section class = "HIW">
         <section class = "HIW-img">
-            <img src = "img2.jpeg">
+            <img src = "img 2.jpeg">
         </section>
         <section class = "Tblock">
             <section class = "TXT">
@@ -85,10 +85,129 @@
         </section>
     </section>
         
-    <div class="container">
-        <div class="discount">DISCOUNT UP TO 40%!</div>
-        <div class="text"> TASTE THE VITAMINS AND KEEP YOUR HEALTH</div>
-      </div>
-    <!--gh-->
+    <section class = "adv">
+        <section class = "adv-txt">
+            <p><span>Discount up to 40%!</span> Taste the vitamins and keep your health</p>
+        </section>
+    </section>
+
+
+    <section class = "vegetables">
+        <section class = "veg-block">
+            <p class = "veg-p">organic <span>vegetables</span></p>
+            <p class = "veg-p2">Our organic vegetables are hand-picked from local farms and delivered straight to your doorstep, ensuring that you get the freshest and most nutritious produce possible.</p>
+        </section>
+        <section class = "veg-cards">
+            <section class = "card-1">
+                <section class = "sec-baklazh">
+                    <section class = "baklazh-txt">
+                        <p class = "eggplant">eggplant<br><span>60 UAH / kg</span></p>
+                    </section>
+                    <img src = "https://s3-alpha-sig.figma.com/img/d66c/439a/7137c63f09ce05c14e468300d49fca37?Expires=1721001600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=dk42648CbKLxhwit3zeQcWzrQwP-5jU4ra~9M2iBp~GrMbVR8YPMDP8mKaL-WKl6hPSoUBs1qfeHgTraiBvwmQvp9wK-gkenP9jrDH-1CZKpSsODhDxOD1Uh70EbXcNZR-kiV01XHF~OCqfkjfQsdIWQxpIG9-Xt5BvzVi8jwGp3YxcGUGATYmYqWxhNjaK~ykRClwxIlg9vbp8911-m1gYSz8zdw0~6IbYLbJzd~7dEq2PhmmI85KfN4iyjLPwi44NOVCpI5pjsUx4U6FzmvOdMkJBIh-OvmuoWw7Ddp4-xH~07eJF3hg8~51nRmLp-pUY-6UB1ckAMHysa5LvNEA__" class = "baklazh-img">
+                </section>
+            </section>
+            <section class = "card-2">
+                <section class = "sec-leek">
+                    <section class = "leek-txt">
+                        <p class = "leek">leek<br><span>50&nbsp;UAH&nbsp;/&nbsp;kg</span></p>
+                    </section>
+                    <img src = "https://s3-alpha-sig.figma.com/img/bacf/1a73/68efd72d6b0bffebdcfef36ba3540814?Expires=1721001600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=kVH4LxQ3dyMVefSwZGUA~thkbaic7Yg69DOXq9k55~D71iC~OptdWw8P~Sb4Iwa8baJFNMl-FXsY9sIe-x1NOUquOu6CXnXFfzEm9AA7svVxFeUzcxfSX62nYEVkKzBFUbss7yVab4JOE8tKfFVArwrbuUw4pRGP7LD-tRAJCBZwePykf1zbwIzuFl53OgEwqoef5melfbD6Hd7jHtM34HnZNDvkYHyPXPlYbuf466ZojCYVcX7RXu-aBxsBMJeK~rwI~STpc7aEvg6iZXrfclVoTNnZj3uAUR7sXFF5JIAGdMQ66dHxy6fIR~EaKjuQ88WZMPbjTsogUOKcjzUNwQ__" class = "leek-img">
+                </section>
+            </section>
+            <section class = "card-3">
+                <section class = "sec-mushroom">
+                    <section class = "mushroom-txt">
+                        <p class = "mushroom">mushroom<br><span>40 UAH / kg</span></p>
+                    </section>
+                    <img src = "https://s3-alpha-sig.figma.com/img/56f1/8914/74602b46b9915a3d683cee6043b63102?Expires=1721001600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Kt6cCZaLOj4OlkO8phV2m6t6jKbt~tdkaCWD9n~0SfOeoXkvdDTBvGxUwudAefkJ93CMaC2dNjHfleajLfIPjZxXZQKvNH94WkpmJGSJUJjwuKM5zzB1TRVY~0mdexj3hlV6E13m5CDYnRRCiiO-zJSx1hBhtj5lpyCTzXi8RdYPPZUwO-2GB1n-V2~u-B3lMhaLTnErX3ZmBoDi5TcswTFY1p03eCCxcL066GiA594ruUi5Xdf7WOJ2rsiHnCoSWnrffIB8gG4hN4dVj0a-yBnFUWvuz~UDysa8RobcAd~wn8rmQL7j5~mUK46Tw3pQEe7QheJJnD0cVtSooou-eg__" class = "mushroom-img">
+                </section>
+            </section>
+            <section class = "card-4">
+                <section class = "sec-corn">
+                    <section class = "corn-txt">
+                        <p class = "corn">corn<br><span>60&nbsp;UAH&nbsp;/&nbsp;kg</span></p>
+                    </section>
+                    <img src = "https://s3-alpha-sig.figma.com/img/8c1d/90f3/16a968347707d14446645ee5fd43d1cb?Expires=1721001600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=GPACXF0yIJGDzkWzStKkzAy8Z1pbRUiV0UpnSEiv6fdaB1Wpu-do-jM8ogXqkbkrOg3prT1k1iDGc3IuTEnLwsuk4gpI2Y-HxcH7FwnVLrwEMk~dxaubR-j53eW~wEpjjn4vQdywVdfeFnG70sNP3UibJEoWgaB6czWuS3qz~i1EDeBbBOHLYPw5Qolryhg23C18Z687mjr8WyXEhVFxnwRRx61sNTFDugMSn-HK09Koc4RhwQGkvV63x9K85qBYCm5GLPjkF6yy-tijrr6jrSbUid4SETV~zWvb2Sbt1qOZqvlhyXoy9cfZgOB~h4itlfd09UXUesXNUA6LE9BIQg__" class = "corn-img">
+                </section>
+            </section>
+            <section class = "card-5">
+                <section class = "sec-potatoe">
+                    <section class = "potatoe-txt">
+                        <p class = "potatoe">sweet&nbsp;potatoes<br><span>50 UAH / kg</span></p>
+                    </section>
+                    <img src = "https://s3-alpha-sig.figma.com/img/6752/4fda/1be64c39ce89a47aeaafbb63ce97e0ff?Expires=1721001600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=IVq0YMMhdeA74NBat0BFSjbq0g7FL6ondFuE-DXYTM4PqFphklHDUBWaXABTBU1Fq2gTEu8u~TsaVggC0dVVkVmYDASt0fS9upDmOG2kQzseq7NBjYLsLkMSi-sYXNamyH3RvdNWixMD-zhptbyogRFVXHpEQKhZuKoBGjByPYOWQV-BclWcm1at2sZyZCrlzNeI78NuliRusEiBAg8unUpC1H70bhVuSNfO3WTH3NLR0rR7qmnueLJCfYgMxyHWwmnugIiMue2eN~e00BX1jHZBHdPd5sG--GxaY~Uz8xmZpcpkzlRqrwBDOqZ~9rT9WzeLoDWzRRFx~n3hc4ZfKA__" class = "potatoe-img">
+                </section>
+            </section>
+            <section class = "card-6">
+                <section class = "sec-carrot">
+                    <section class = "carrot-txt">
+                        <p class = "carrot">carrot<br><span>40 UAH / kg</span></p>
+                    </section>
+                    <img src = "https://s3-alpha-sig.figma.com/img/147b/cd14/6a501b5976758824ff129d5647a57848?Expires=1721001600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=gSxYStJ3teHPdqno~IQ~KHKBz2F43bSVnM6D7gw8U0iz2Rg4QN9PIEkBS00wKQ2PTYHjTFdIRJetvOX~Rh~09MdI6L89qTIdOB7rYz9MsBnnYogThvrzV7aXNM-20yxw632JfKvqJTCU857R7ZSnwiMPluFLdRr-AvqgavLEDtYHjhoASg3RFLgRVabZPJYjX4b3aVS0rvClRzpRTVgUDlPIMgRiyJcg7QpwewCFAj6fWPOFAlLeObINxM3Ni6-9VLwcoLJYuMK7QfE1s9kO5AsK1AvGshi9pu7y5Os2cvhGPOkslrFB3S8zdvrFV5ud-qVVSuUoKmJpA2w3Mw1wwA__" class = "mushroom-img">
+                </section>
+            </section>
+        </section>
+    </section>
+
+
+    <section class = "reviews">
+        <section class = "review-text">
+            <p class = "customers-review">reviews from our&nbsp;<span>customers</span></p>
+            <p class = "words-customers">Words of our customers: impressions and opinions about the quality of our services and the freshness of our products.</p>
+        </section>
+        <section class = "Reviews">
+            <section class = "rev-1">
+                <section class = "content-1">
+                    <section class = "content-img-1">
+                        <img src = "https://s3-alpha-sig.figma.com/img/827a/9739/0725725c556d2ad8f4accfdfb4716242?Expires=1721001600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=MYtjyxtUTDn80FAEJ16tusKKiyHY73amouvIJte5JZBJ~b3MsWs1udtXTl7WSo~7-sn9El9bmLnRxil5EDT8V~5vT5rDoVuNB13KpE3iLJufLQ14EchISFGkvgz~UoT53mCrbqCyFCfG7QOKXzFQ7dtVtQlBDOOaEj2t3KTgrv4p6vyG3KHrt~bhzbzr1L~Jf-WeLevkphbGIDzkyU2NK7Nst2vwl94q~Kd-IURrtSi4lGmOq~-P6iElpIKPVfUd7iCf3xy6yoWmVHTgsaIQXyfhMXCSsTmW2t5aIdAaCS7HJ55W7Q2gs2ZyNuxnx4dQK0SPwLRoiwu01uMTENaHyQ__" class = "himg-1">
+                    </section>
+                    <section class = "content-text-1">
+                        <section class = "autor-1">
+                            <p>John&nbsp;Wax</p>
+                        </section>
+                        <section class = "comment-autor-1">
+                            <p>These vegetables are my secret to delicious and healthy meals. The quality is always at the highest level, the aroma and taste are enchanting. I advise every fan of real products!</p>
+                        </section>
+                    </section>
+                </section>
+            </section>
+
+
+            <section class = "rev-2">
+                <section class = "content-2">
+                    <section class = "content-img-2">
+                        <img src = "https://s3-alpha-sig.figma.com/img/55b1/6875/2525f10236fd04dbea8bea5cf88d7584?Expires=1721001600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=fRkI68WWgmjbkxx1Ofcs2SQUZa8DVQF3pq0mKHinjqjpxcVg8yui2mP-3nkJZY99L16zwwKOYF6PCPCgFTwscMn8fsKCJYLewDmps39oPn2BUBTv8AiVs7~~ocHBK7k6g28mlNKQjWamqaHF54WEXUdcym1gQTs4Hd~j45RiwD-hIFqOuyiqwZawRPyfvkGuCgaPfSyJCthgwx7VzfTu5zRgy3FosdGQxfM8KV7p8p5qmuz-DJ262sVIdCILw3bdTxaeRi7lbvAg7sxPNSCN7-vXWvXYb~O7wQEMICKlYmX05VjGiMuaZYj61e0S13x7GJogtxRbI3jORb1X19JIUg__" class = "himg-2">
+                    </section>
+                    <section class = "content-text-2">
+                        <section class = "autor-2">
+                            <p>Victoria&nbsp;Romashenko</p>
+                        </section>
+                        <section class = "comment-autor-2">
+                            <p>I love how fast and fresh the vegetables are delivered. Salads always turn out so appetizing, and soups are real masterpieces. The quality is impeccable!</p>
+                        </section>
+                    </section>
+                </section>
+            </section>
+
+
+            <section class = "rev-3">
+                <section class = "content-3">
+                    <section class = "content-img-3">
+                        <img src = "https://s3-alpha-sig.figma.com/img/b707/ba27/bd51c1ca26ba2c109e5e0f5574106401?Expires=1721001600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=DsNwFh9I3U5GIVYADuP1Fi-jXORUKXhyEKdh6WrqgdrjnRo~FMeVVeIRdQtUzoZaoEuG6VNBKSX82C~QG4Mzxuf~e0H1yHAIL2HOPvYcLV0B29zZhuyRoRTacBbJjBamf0Hyi1jVveGflyUMLIWbP4TwxY5rZnqeuvNxLSssUaxv88SmMSNjbcb2M9PVp6bWMa~t2VCHp5nTxHFs2hbntVpb0kNhxHR7WU9aUFLsEjiCLpQNdBv4Tav9r2hRZ7O3PPyGYKdTLL7v5BnMRVElS96OCguylETucGklXtZxZ8JgVaod6zo-gg095FfmAThAu1DnkvfxdzOZZB88rx0FRQ__" class = "himg-3">
+                    </section>
+                    <section class = "content-text-3">
+                        <section class = "autor-3">
+                            <p>Ihor&nbsp;Trachuk</p>
+                        </section>
+                        <section class = "comment-autor-3">
+                            <p>Recently tried my fresh tomatoes and peppers - amazing! The authenticity of the taste, as if from the garden directly to my table. It is now my main vegetable supplier.</p>
+                        </section>
+                    </section>
+                </section>
+            </section>
+            </section>
+        </section>
+    </section>
+
 </body>
 </html>
