--- a/page.html
+++ b/page.html
@@ -30,8 +30,8 @@
         </div>
     </header>   
     <section class = "startpage">
-        <p class="organic">organic vegetables to&nbsp;your&nbsp;diet today!</p>
-        <p class = "comment-start">Our expertly curated vegetable baskets are made with the freshest,&nbsp;highest&nbsp;quality vegetables available. Fresh Harvest Box has&nbsp;got&nbsp;you covered. Fresh, high-quality vegetables in expertly curated&nbsp;vegetable baskets delivered to you.</p>
+        <p class="organic">organic vegetables to your diet today!</p>
+        <p class = "comment-start">Our expertly curated vegetable baskets are made with the freshest, highest quality vegetables available. Fresh Harvest Box has got you covered. Fresh, high-quality vegetables in expertly curated vegetable baskets delivered to you.</p>
     </section>        
         <img src = "img 1.png" class = "startImg">
     <header>
@@ -51,8 +51,8 @@
         </section>
         <section class = "Tblock">
             <section class = "TXT">
-                <p class = "order">To&nbsp;order&nbsp;your&nbsp;<span style = "opacity: 0.3;">vegetable</span> basket, simply&nbsp;follow these&nbsp;<span style = "opacity: 0.3;">easy steps</span></p>
-                <p class = "baskets">Our baskets are assembled with care and delivered straight to your&nbsp;doorstep, so you can enjoy the taste of fresh fruit without ever&nbsp;leaving your home.</p>
+                <p class = "order">To order your <span style = "opacity: 0.3;">vegetable</span> basket, simply follow these <span style = "opacity: 0.3;">easy steps</span></p>
+                <p class = "baskets">Our baskets are assembled with care and delivered straight to your doorstep, so you can enjoy the taste of fresh fruit without ever leaving your home.</p>
             </section>
         </section>
     </section>
@@ -87,7 +87,7 @@
         
     <section class = "adv">
         <section class = "adv-txt">
-            <p><span>Discount up to 40%!</span> Taste the vitamins and keep your health</p>
+            <p><span>Discount up to 40%! </span>Taste the vitamins and keep your health</p>
         </section>
     </section>
 
@@ -133,7 +133,7 @@
             <section class = "card-5">
                 <section class = "sec-potatoe">
                     <section class = "potatoe-txt">
-                        <p class = "potatoe">sweet&nbsp;potatoes<br><span>50 UAH / kg</span></p>
+                        <p class = "potatoe">sweet potatoes<br><span>50 UAH / kg</span></p>
                     </section>
                     <img src = "https://s3-alpha-sig.figma.com/img/6752/4fda/1be64c39ce89a47aeaafbb63ce97e0ff?Expires=1721001600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=IVq0YMMhdeA74NBat0BFSjbq0g7FL6ondFuE-DXYTM4PqFphklHDUBWaXABTBU1Fq2gTEu8u~TsaVggC0dVVkVmYDASt0fS9upDmOG2kQzseq7NBjYLsLkMSi-sYXNamyH3RvdNWixMD-zhptbyogRFVXHpEQKhZuKoBGjByPYOWQV-BclWcm1at2sZyZCrlzNeI78NuliRusEiBAg8unUpC1H70bhVuSNfO3WTH3NLR0rR7qmnueLJCfYgMxyHWwmnugIiMue2eN~e00BX1jHZBHdPd5sG--GxaY~Uz8xmZpcpkzlRqrwBDOqZ~9rT9WzeLoDWzRRFx~n3hc4ZfKA__" class = "potatoe-img">
                 </section>
@@ -152,7 +152,7 @@
 
     <section class = "reviews">
         <section class = "review-text">
-            <p class = "customers-review">reviews from our&nbsp;<span>customers</span></p>
+            <p class = "customers-review">reviews from our <span>customers</span></p>
             <p class = "words-customers">Words of our customers: impressions and opinions about the quality of our services and the freshness of our products.</p>
         </section>
         <section class = "Reviews">
@@ -205,6 +205,33 @@
                     </section>
                 </section>
             </section>
+            </section>
+        </section>
+    </section>
+
+
+    <section class = "orders">
+        <section class = "order-text">
+            <p class = "order-harvest">Fresh <span>Harvest</span> Box has go you covered</p>
+            <p class = "order-boxes">Our boxes are packed with delicious, nutritious vegetables, perfect for anyone looking to eat healthier or support local farmers. Order your box today and start enjoying the best that nature has to offer!</p>
+        </section>  
+
+        <section class = "registration">
+            <section class = "form">
+                <section class = "register-form">
+                    <p class = "reg-txt">Ordering <span class = "us">from us</span> is quick and easy! Fill out <span class = the-form>the form</span> below and we will contact you !</p>
+                    
+                    <section class = "inp-btn">
+                        <section class = "input">
+                            <input type="text" placeholder="Full Name" class = "textfield-name" id = "name-txt-f">
+                        </section>
+                        <section class = "btn-send">
+
+                        </section>
+                    </section>
+
+
+                </section>
             </section>
         </section>
     </section>
